--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "mysql": "^2.18.1",
     "path": "^0.12.7"
   }
 }
